# nyas

./: .gitignore  Cargo.toml  README.md  bolt.sh
.github/actions/setup/: action.yml
.github/workflows/: rust-ci.yml
examples/: Cargo.toml
examples/src/: index_utils.rs  sift10k_index.rs  sift1m_index.rs
nyas/diskann/: Cargo.toml
nyas/diskann/src/: disk_index_storage.rs  in_disk_index.rs  in_mem_index.rs  index.rs  index_builder.rs  index_view.rs  lib.rs  pq_loader.rs  product_quantizer.rs  temp.rs  temp_search.rs  utils.rs
nyas/diskann/tests/: test_in_disk_index.rs  test_in_mem_index.rs  test_index.rs  test_index_view.rs
nyas/proto/: vector.proto
nyas/service/: Cargo.toml  build.rs
nyas/service/src/: lib.rs
nyas/service/tests/: test_service.rs
nyas/storage/: Cargo.toml
nyas/storage/benches/: vector_bench.rs
nyas/storage/src/: entity.rs  lib.rs  metric.rs  vector_data.rs  vector_db.rs  vector_disance.rs  vector_point.rs  vector_store.rs  writer.rs
nyas/storage/tests/: test_entity.rs  test_vector_data.rs  test_vector_distance.rs  test_vector_store.rs
nyas/system/: Cargo.toml
nyas/system/benches/: vector_bench.rs
nyas/system/src/: entity.rs  metric.rs  vector_data.rs  vector_db.rs  vector_disance.rs  vector_point.rs  vector_store.rs  writer.rs
nyas/system/tests/: test_entity.rs  test_vector_data.rs  test_vector_distance.rs  test_vector_store.rs
nyas/vecd/: Cargo.toml
nyas/vecd/src/: main.rs
tools/: README.md  main.py  pyproject.toml
