[workspace]
resolver = "3"
members = [ "nyas/service", "nyas/storage", "nyas/vecd"]

[workspace.package]
authors = ["Manish Kumar <manish@neocraft.tech>"]
edition = "2024"
homepage = "https://neocraft.tech/"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/neocrafttech/nyas"
rust-version = "1.90.0"
version = "0.1.0"

[workspace.dependencies]
mimalloc = { version = "*", features = ["v3"] }
tokio = { version = "1.47.1", features = ["full"] }
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hnsw_rs = "0.3.2"
uuid = { version = "1.3", features = ["v4"] }
log = "0.4"
env_logger = "0.10"

[workspace.dev-dependencies]
cargo-nextest = "0.9.1"
