[workspace]
resolver = "3"
members = [ "nyas/diskann", "nyas/service", "nyas/storage", "nyas/vecd"]

[workspace.package]
authors = ["Manish Kumar <manish@neocraft.tech>"]
edition = "2024"
homepage = "https://neocraft.tech/"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/neocrafttech/nyas"
rust-version = "1.91.0"
version = "0.1.0"

[workspace.dependencies]
mimalloc = { version = "*", features = ["v3"] }
tokio = { version = "1.47.1", features = ["full"] }
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
prost = "0.14"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0"
hnsw_rs = "0.3.2"
uuid = { version = "1.3", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
memmap2 = "0.9.8"
lru = "0.16.1"
rand = "0.9.2"
rayon = "1.11.0"
ordered-float = "5.1.0"
thiserror = "2.0.17"
bincode = "2.0.1"
rmp-serde = "1.3.0"
nalgebra = "0.34.1"
bytemuck = "1.24.0"
half = { version = "2.7.1", features = ["bytemuck", "num-traits", "serde", "std", "rand_distr"] }
simsimd = "6.5.3"
dashmap = "6.1.0"
criterion = { version = "0.7.0", features = ["html_reports"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[profile.bench]
opt-level = 3
codegen-units = 1
lto = true
debug = false
