[package]
name = "diskann"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lru.workspace = true
memmap2.workspace = true
rand.workspace = true
tokio.workspace = true
ordered-float.workspace = true
