[package]
name = "diskann"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lru.workspace = true
memmap2.workspace = true
rand.workspace = true
tokio.workspace = true
ordered-float.workspace = true
dashmap = { version = "6.0.1", features = ["rayon"] }
rayon.workspace = true
serde.workspace = true
rkyv.workspace = true
tracing.workspace = true
system = { path = "../system" }
