[package]
name = "storage"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
hnsw_rs.workspace = true
uuid.workspace = true
tokio.workspace = true
thiserror.workspace = true
bincode.workspace = true
rmp-serde.workspace = true
serde.workspace = true
nalgebra.workspace = true
bytemuck.workspace = true
half.workspace = true
simsimd.workspace = true

[dev-dependencies]
rand.workspace = true
criterion.workspace = true

[[bench]]
name = "vector_bench"
harness = false
