[package]
name = "system"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
uuid.workspace = true
tokio.workspace = true
thiserror.workspace = true
rmp-serde.workspace = true
serde.workspace = true
nalgebra.workspace = true
bytemuck.workspace = true
half.workspace = true
simsimd.workspace = true
rkyv.workspace = true

[dev-dependencies]
rand.workspace = true
criterion.workspace = true

[[bench]]
name = "vector_bench"
harness = false
