[package]
name = "vecd"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
env_logger.workspace = true
mimalloc.workspace = true
tokio.workspace = true
tonic.workspace = true
service = { path = "../service" }
storage = { path = "../storage" }
